# Server/middleware/validator.js
@@ -1,25 +1,24 @@
-const { celebrate, Joi, errors, Segments } = require("celebrate");
+const { celebrate, Joi, Segments } = require("celebrate");
+const Roles = require("../constants/roles");
 
 const validateUsers = celebrate({
-  [Segments.BODY]: Joi.object().keys({
-    name: Joi.string().required(),
+  [Segments.BODY]: {
+    name: Joi.string(),
     email: Joi.string()
       .email({
         minDomainSegments: 2,
         tlds: { allow: ["com", "in"] },
       })
-      .trim(true)
-      .required(),
-    password: Joi.string().min(8).trim(true).required(),
-    phoneNumber: Joi.string()
-      .length(10)
-      .pattern(/[6-9]{1}[0-9]{9}/)
-      .required(),
-    isAdmin: Joi.string().default("user"),
+      .trim(true),
+    password: Joi.string().min(8).trim(true),
+    phoneNumber: Joi.string().length(10),
+    isAdmin: Joi.string()
+      .valid(...Object.values(Roles))
+      .default(Roles.USER),
     pic: Joi.string().default(
       "https://icon-library.com/images/anonymous-avatar-icon/anonymous-avatar-icon-25.jpg"
     ),
-  }),
+  },
 });
 
 module.exports = validateUsers;
